public/game.css
@font-face {
    font-family: Treasure Map;
    src: "./treasuremap.ttf";
}

.north-america{
    fill: rgb(248, 248, 93);
}

.south-america{
    fill: rgb(255, 68, 68);
}

.africa{
    fill: rgb(158, 55, 55);
}

.australia{
    fill: rgb(170, 110, 170);
}

.europe{
    fill: lightskyblue;
}

.asia{
    fill: rgb(97, 192, 97);
}

.territory{
    stroke-width: 0px;
}

.territory:hover{
    fill: lightgray;
}

.continent-border{
    stroke-width: 3px;
    box-shadow: 20px;
    /* fill: transparent; */
    z-index: 2;
}

.territory-border{
    stroke-width: 2px;
    stroke: black;
}

#map-container {
    display: flex;
    width: 100%;
    height: 100%;
    align-items: center;
    justify-content: center;
}

#map-overlay {
    height: 830px;
    width: 1200px;
    scale: 90%;
}

#dice-box{
    position:fixed;
    display: flex;
    height: 50px;
    width: 460px;
    
    bottom: 20%;
    left: 2%;
}
#defense-dice{
    position:relative;
    display:inline-flex;
    flex-direction:row-reverse;
    justify-content: space-between;

    left: 25%;
    height: 100%;
    width: 30%;
}
#attack-dice{
    display: inline-flex;
    flex-direction: row;
    justify-content:left;


    height: 100%;
    width: 45%;
}
.dice{
    text-align: center;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    font-size: 30px;

    margin-left: 20px;
    display: none;

    border: 5px solid rgb(62, 62, 62);
    border-radius: 5px;
    width: 40px;
    height: 40px;
    background-color: white;
}

#info-box{

    position:fixed;
    display: flex;
    justify-content: center;
    height: 130px;
    width: 450px;
    
    border: 5px solid rgb(139, 96, 40);
    background-color: burlywood;
    border-radius: 20px;
    opacity: 0.7;

    bottom: 3%;
    left: 2%;
}

#info-box:hover{
    opacity: 1;
}

.country-info{
    position: relative;
    display: block;

    top: 50%;
    right: 22.5%;
    transform: translate(50%, -50%);

    height: 90%;
    width: 45%;
    background-color: rgb(218, 152, 66) ;
    border-radius: 20px;
    margin-left: 15px;
    margin-right: 15px;
}

.player-info{
    display: inline;
}
.info{
    padding: 11px 0px 5px 10px;
    color:rgb(99, 65, 20);
    font-size: 15px;
}

#attack-box{
    margin: 3px;
    position: fixed;

    height: 110px;
    width: 110px;
    border-radius: 50%;
    
    margin-top: -80px;
    z-index: 3;

    border: 5px solid rgb(139, 96, 40);
    cursor: pointer;
    text-align: center;
    color: black;
    font-size: 25px;
    opacity: 0.7;

    bottom: 6%;
    right: 4%;
}

#attack-box:hover{
    margin: 0px;
    border: 8px solid darkred;
    color: rgb(105, 0, 0);
    opacity: 1;
}

#attack-button{
    text-align: center;
    height: 100%;
    width: 100%;
    border-radius: 50%;

    color: black;
}

#attack-text{
    position: absolute;
    top: 38%;
    font-family: Georgia, 'Times New Roman', Times, serif;
    font-weight: 700;
}


#conquer-backdrop {
    display: none;
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    z-index: 1000;
    background-color: rgba(0, 0, 0, 0.85);
    z-index: 1000;
  }
#conquer-box{
    display: none;
    top: 50%;
    left: 50%;
    width: 30em;
    height: 18em;
    margin-top: -9em;
    margin-left: -15em;
    border-radius: 35px;
    background-color: rgb(139, 96, 40);
    position: fixed;
    z-index: 1010;

    align-items: center;
    flex-direction:column;
    justify-content: center;
}
#country-names{
    display:flex;
    flex-direction: column;
    width: 100%;
    height:25%;
    align-items: center;
    justify-content: center;
    font-size: xx-large;
}
#conquer-infobox{
    display:flex;
    flex-direction: row;
    width: 100%;
    height:65%;

    align-items: center;
    justify-content: center;
}
.conquer-info{
    text-align: center;
    flex-direction:row;
    justify-content: center;
    display: flex;
    flex: 1;
    aspect-ratio: 1 / 1;
    width: 20%;

    font-size: 4em;
}

#conquer-infobox button{
    background-color: rgb(139, 96, 40);
    border: none;
}
#conquer-infobox button:hover{
    cursor:pointer;
    font-size: 5em;
}
.conquer-troop{
   padding: 10px;
   margin: 40px;

   border: 1px solid black;
   font-size:4em;
   z-index: 1020;
}
#conquer-done{
    height:10%;
    width:fit-content;
    background-color: rgb(73, 45, 8);
    margin-bottom:1%;
}
#conquer-done:hover{
    cursor:pointer;
}

#tooltip {
    position: fixed;
    height: 100px;
    width: 175px;
    border-radius: 10px;
    display: none;
    z-index: 3;
    background-color: rgb(218, 152, 66) ;
    border: 5px solid rgb(139, 96, 40);
}

#map-size-container {
    position: fixed;
    bottom: 10px;
    right: 10px;
    border-radius: 10px;
    z-index: 3;
    size: 30px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.map-sizing{
    /* padding: 11px 0px 5px 10px; */
    color:rgb(99, 65, 20);
    font-size: 35px;
    align-items: center;
    /* margin: 10px; */
    font-weight: bold;
}
#user-sidebars {
	display: flex;
	flex-direction: column;
	position: fixed;
	left: 0;
	top: 25px;
}

.sidebar {
	background: linear-gradient(to right, white 2%, rgb(89, 208, 25) 110%) left;
	width: 150px;
	height: 45px;
	border-bottom-right-radius: 20px;
 	border-top-right-radius: 20px;
	border: 2px solid black;
	margin-top: 10px;
	margin-bottom: 10px;
	opacity: .78;
}

.sidebar-text {
	margin-right: 15px;
	font-size: 16px;
	text-align: right;
	font-family: "Treasure Map";
    -webkit-text-stroke: 1px black;
}

.troop-count{
    z-index: 4;
}

